TEST_PROGRAMS/VALID/09/return_in_switch.go
package return_switch

func main() {
    plus(1, 2)
}

func plus(a, b int) int{
    switch a {
    case 1:
        return 0
    default:
        return 0
        ;;;
    }

}
